Trying to fix the huge image issue on iPhone part 2.

--- a/style/index.css
+++ b/style/index.css
@@ -110,7 +110,7 @@ h2 {
     padding-bottom: 10%;
     display: flex;
     margin: 0 1%;
-    max-height: auto;
+    max-height: 100vh;
 }
 
 #favoriteimage {
